// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Plot Settings component renders plot settings form correctly (x-axis tab selected) 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-direction-xs-column css-ffjoah-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <mock-plottitlefield
        data-testid="mock-plotTitleField"
      >
        plotTitle=undefined
changePlotTitle=undefined

      </mock-plottitlefield>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <mock-charttypebuttons
        data-testid="mock-chartTypeButtons"
      >
        plotType="scatter"
changePlotType=undefined

      </mock-charttypebuttons>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <div
        class="MuiBox-root css-1gsv261"
      >
        <div
          class="MuiTabs-root css-1yb2e4d-MuiTabs-root"
        >
          <div
            class="MuiTabs-scroller MuiTabs-fixed css-jpln7h-MuiTabs-scroller"
            style="overflow: hidden; margin-bottom: 0px;"
          >
            <div
              aria-label="tabs"
              class="MuiTabs-flexContainer css-heg063-MuiTabs-flexContainer"
              role="tablist"
            >
              <button
                aria-controls="X-tabpanel"
                aria-selected="true"
                class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Mui-selected css-ejfd77-MuiButtonBase-root-MuiTab-root"
                id="X-tab"
                role="tab"
                tabindex="0"
                type="button"
              >
                X
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
              <button
                aria-controls="Y-tabpanel"
                aria-selected="false"
                class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary css-ejfd77-MuiButtonBase-root-MuiTab-root"
                id="Y-tab"
                role="tab"
                tabindex="-1"
                type="button"
              >
                Y
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
            </div>
            <span
              class="MuiTabs-indicator css-1aquho2-MuiTabs-indicator"
              style="left: 0px; width: 0px;"
            />
          </div>
        </div>
      </div>
      <div
        aria-labelledby="X-tab"
        id="X-tabpanel"
        role="tabpanel"
      >
        <div
          class="MuiBox-root css-0"
        >
          <mock-xaxistab
            data-testid="mock-xAxisTab"
          >
            allChannels=[
  {
    "systemName": "timestamp",
    "name": "Time",
    "type": "scalar",
    "path": "/system/timestamp"
  },
  {
    "systemName": "shotnum",
    "name": "Shot Number",
    "type": "scalar",
    "path": "/system/shotnum"
  },
  {
    "systemName": "activeArea",
    "name": "Active Area",
    "type": "scalar",
    "path": "/system/activeArea"
  },
  {
    "systemName": "activeExperiment",
    "name": "Active Experiment",
    "type": "scalar",
    "path": "/system/activeExperiment"
  },
  {
    "systemName": "test_1",
    "type": "scalar",
    "name": "Test 1",
    "precision": 4,
    "path": "/test_1"
  },
  {
    "systemName": "test_2",
    "type": "scalar",
    "precision": 2,
    "notation": "normal",
    "path": "/test_2"
  },
  {
    "systemName": "test_3",
    "type": "scalar",
    "precision": 2,
    "notation": "scientific",
    "path": "/test_3"
  }
]
XAxisScale="linear"
XAxis="test x-axis"
changeXAxis=undefined
changeXAxisScale=undefined
initialXMinimum=undefined
initialXMaximum=undefined
changeXMinimum=undefined
changeXMaximum=undefined

          </mock-xaxistab>
        </div>
      </div>
      <div
        aria-labelledby="Y-tab"
        hidden=""
        id="Y-tabpanel"
        role="tabpanel"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Plot Settings component renders plot settings form correctly (y-axis tab selected) 1`] = `
<DocumentFragment>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-direction-xs-column css-ffjoah-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <mock-plottitlefield
        data-testid="mock-plotTitleField"
      >
        plotTitle=undefined
changePlotTitle=undefined

      </mock-plottitlefield>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <mock-charttypebuttons
        data-testid="mock-chartTypeButtons"
      >
        plotType="scatter"
changePlotType=undefined

      </mock-charttypebuttons>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <div
        class="MuiBox-root css-1gsv261"
      >
        <div
          class="MuiTabs-root css-1yb2e4d-MuiTabs-root"
        >
          <div
            class="MuiTabs-scroller MuiTabs-fixed css-jpln7h-MuiTabs-scroller"
            style="overflow: hidden; margin-bottom: 0px;"
          >
            <div
              aria-label="tabs"
              class="MuiTabs-flexContainer css-heg063-MuiTabs-flexContainer"
              role="tablist"
            >
              <button
                aria-controls="X-tabpanel"
                aria-selected="false"
                class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary css-ejfd77-MuiButtonBase-root-MuiTab-root"
                id="X-tab"
                role="tab"
                tabindex="-1"
                type="button"
              >
                X
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                />
              </button>
              <button
                aria-controls="Y-tabpanel"
                aria-selected="true"
                class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Mui-selected css-ejfd77-MuiButtonBase-root-MuiTab-root"
                id="Y-tab"
                role="tab"
                tabindex="0"
                type="button"
              >
                Y
                <span
                  class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                >
                  <span
                    class="css-y4cjyz-MuiTouchRipple-ripple MuiTouchRipple-ripple MuiTouchRipple-rippleVisible"
                    style="width: 2.8284271247461903px; height: 2.8284271247461903px; top: -1.4142135623730951px; left: -1.4142135623730951px;"
                  >
                    <span
                      class="MuiTouchRipple-child MuiTouchRipple-childLeaving"
                    />
                  </span>
                </span>
              </button>
            </div>
            <span
              class="MuiTabs-indicator css-1aquho2-MuiTabs-indicator"
              style="left: 0px; width: 0px;"
            />
          </div>
        </div>
      </div>
      <div
        aria-labelledby="X-tab"
        hidden=""
        id="X-tabpanel"
        role="tabpanel"
      />
      <div
        aria-labelledby="Y-tab"
        id="Y-tabpanel"
        role="tabpanel"
      >
        <div
          class="MuiBox-root css-0"
        >
          <mock-yaxistab
            data-testid="mock-yAxisTab"
          >
            selectedRecordTableChannels=[
  {
    "systemName": "timestamp",
    "channel_dtype": "scalar",
    "userFriendlyName": "Time"
  }
]
allChannels=[
  {
    "systemName": "timestamp",
    "name": "Time",
    "type": "scalar",
    "path": "/system/timestamp"
  },
  {
    "systemName": "shotnum",
    "name": "Shot Number",
    "type": "scalar",
    "path": "/system/shotnum"
  },
  {
    "systemName": "activeArea",
    "name": "Active Area",
    "type": "scalar",
    "path": "/system/activeArea"
  },
  {
    "systemName": "activeExperiment",
    "name": "Active Experiment",
    "type": "scalar",
    "path": "/system/activeExperiment"
  },
  {
    "systemName": "test_1",
    "type": "scalar",
    "name": "Test 1",
    "precision": 4,
    "path": "/test_1"
  },
  {
    "systemName": "test_2",
    "type": "scalar",
    "precision": 2,
    "notation": "normal",
    "path": "/test_2"
  },
  {
    "systemName": "test_3",
    "type": "scalar",
    "precision": 2,
    "notation": "scientific",
    "path": "/test_3"
  }
]
selectedPlotChannels=[]
changeSelectedPlotChannels=undefined
initialLeftYAxisMinimum=undefined
initialLeftYAxisMaximum=undefined
changeLeftYAxisMinimum=undefined
changeLeftYAxisMaximum=undefined
initialRightYAxisMinimum=undefined
initialRightYAxisMaximum=undefined
changeRightYAxisMinimum=undefined
changeRightYAxisMaximum=undefined
leftYAxisScale="logarithmic"
changeLeftYAxisScale=undefined
rightYAxisScale="linear"
changeRightYAxisScale=undefined
initialSelectedColours=undefined
initialRemainingColours=undefined
changeSelectedColours=undefined
changeRemainingColours=undefined

          </mock-yaxistab>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
